--- a/src/main/resources/templates/registrado/index.html
+++ b/src/main/resources/templates/registrado/index.html
@@ -57,7 +57,7 @@
 			<div  class="col-md-3">
 				<div class="row form">				 
 				 	<p>Hola <span th:text="${nombre}"></span></p>
-				 	<p><a th:href="@{/usuario/ver(nombre=${nombre})}">Mi perfil</a></p>				 
+				 	<p><a th:href="@{/usuario/ver}">Mi perfil</a></p>				 
 				</div>
 				<div class="row">
 				categorias
