--- a/src/main/resources/templates/usuario/modificarUsuario.html
+++ b/src/main/resources/templates/usuario/modificarUsuario.html
@@ -56,13 +56,13 @@
 				<div class="row form">
 				 <form th:object="${usuario}" th:action="@{/registro/registrar}" method="post" >
 				 	<p>Log in</p>
-				 	<p><input type="text" placeholder="Usuario" th:field="*{username}"/></p>
+				 	<p><input type="text" placeholder="Usuario" disabled th:field="*{username}"/></p>
 				 	<p><input type="password" placeholder="Contraseña" th:field="*{password}"/></p>
 				 	<p><input type="password" placeholder=" Repita Contraseña" /></p>
 				 	<p><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
 				 	<p><input type="text" placeholder="apellidos" th:field="*{apellidos}"/></p>
 				 	<p><input type="email" placeholder="Usuario" th:field="*{correo}"/></p>				 	
-				 	<p><input type="submit" value="Registrar" id="entrar"/></p>
+				 	<p><input type="submit" value="Modificar" id="entrar"/></p>
 				 </form>
 				</div>
 				<div class="row">
