--- a/src/main/resources/templates/usuario/verUsuario.html
+++ b/src/main/resources/templates/usuario/verUsuario.html
@@ -54,15 +54,14 @@
 		<div class="row">
 			<div  class="col-md-9">
 				<div class="row form">
-				 <form th:object="${usuario}" th:action="@{/registro/registrar}" method="post" >
+				 <form th:object="${usuario}"  method="post" >
 				 	<p>Log in</p>
-				 	<p><input type="text" placeholder="Usuario" th:field="*{username}"/></p>
-				 	<p><input type="password" placeholder="Contraseña" th:field="*{password}"/></p>
-				 	<p><input type="password" placeholder=" Repita Contraseña" /></p>
-				 	<p><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
-				 	<p><input type="text" placeholder="apellidos" th:field="*{apellidos}"/></p>
-				 	<p><input type="email" placeholder="Usuario" th:field="*{correo}"/></p>				 	
-				 	<p><input type="submit" value="Registrar" id="entrar"/></p>
+				 	<p><input type="text" placeholder="Usuario" disabled th:field="*{username}"/></p>
+				 	<p><input type="password" placeholder="Contraseña" disabled th:field="*{password}"/></p>
+				 	<p><input type="text" placeholder="Nombre" disabled th:field="*{nombre}" /></p>
+				 	<p><input type="text" placeholder="apellidos" disabled th:field="*{apellidos}"/></p>
+				 	<p><input type="email" placeholder="Usuario" disabled th:field="*{correo}"/></p>
+				 	<p><a th:href="@{/usuario/modificarForm}">Modificar</a></p>	
 				 </form>
 				</div>
 				<div class="row">
