--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<h1>admin</h1>
+<h1>dentro</h1>
 	
 	<header id="sp-logo">
 		<div class="container">
@@ -55,14 +55,11 @@
 		<div class="row">
 			<div  class="col-md-9"></div>
 			<div  class="col-md-3">
-				<div class="row form">
-				 <form th:action="@{/login}" method="post" >
-				 	<p>Log in</p>
-				 	<p><input type="text" placeholder="Usuario" name="username"/></p>
-				 	<p><input type="password" placeholder="Contraseña" name="password"/></p>
-				 	<p><input type="submit" value="Entrar" id="entrar"/></p>
-				 	<p><a>Registrarse</a></p>
-				 </form>
+				<div class="row form">				 
+				 	<p>Hola <span th:text="${nombre}"></span></p>
+				 	<p><a th:href="@{/usuario/ver}">Gestion de usuario</a></p>	
+				 	<p><a th:href="@{/usuario/ver}">Gestion de post</a></p>	
+				 	<p><a th:href="@{/usuario/ver}">Mi perfil</a></p>				 
 				</div>
 				<div class="row">
 				categorias
@@ -74,15 +71,7 @@
 		</div>
 
 	</main>
- <div th:if="${param.error}">
-            Usuario o password invalidos.
-        </div>
-        <div th:if="${param.logout}">
-            Has hecho logout.
-        </div>
-	<a th:href="@{/registrado}">registrado</a>
-	<a th:href="@{/admin}">admin</a>
-	<a th:href="@{/logout}">logout</a>
+
 
 </body>
 </html>
