--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -57,9 +57,9 @@
 			<div  class="col-md-3">
 				<div class="row form">				 
 				 	<p>Hola <span th:text="${nombre}"></span></p>
-				 	<p><a th:href="@{/usuario/ver}">Gestion de usuario</a></p>	
-				 	<p><a th:href="@{/usuario/ver}">Gestion de post</a></p>	
-				 	<p><a th:href="@{/usuario/ver}">Mi perfil</a></p>				 
+				 	<p><a th:href="@{/usuario/listar}">Gestion de usuario</a></p>	
+				 	<p><a th:href="@{/post/listar}">Gestion de post</a></p>	
+				 	<p><a th:href="@{/perfil/ver}">Mi perfil</a></p>				 
 				</div>
 				<div class="row">
 				categorias
