--- a/src/main/resources/templates/usuarios/verUsuario.html
+++ b/src/main/resources/templates/usuarios/verUsuario.html
@@ -61,7 +61,7 @@
 				 	<p><input type="text" placeholder="Nombre" disabled th:field="*{nombre}" /></p>
 				 	<p><input type="text" placeholder="apellidos" disabled th:field="*{apellidos}"/></p>
 				 	<p><input type="email" placeholder="Usuario" disabled th:field="*{correo}"/></p>
-				 	<p><a th:href="@{/perfil/modificarForm}">Modificar</a></p>	
+				 	<p><a th:href="@{/usuario/modificarForm}">Modificar</a></p>	
 				 </form>
 				</div>
 				<div class="row">
