--- a/src/main/resources/templates/perfil/modificarUsuario.html
+++ b/src/main/resources/templates/perfil/modificarUsuario.html
@@ -54,7 +54,7 @@
 		<div class="row">
 			<div  class="col-md-9">
 				<div class="row form">
-				 <form th:object="${usuario}" th:action="@{/registro/registrar}" method="post" >
+				 <form th:object="${usuario}" th:action="@{/perfil/modificar}" method="post" >
 				 	<p>Log in</p>
 				 	<p><input type="text" placeholder="Usuario" disabled th:field="*{username}"/></p>
 				 	<p><input type="password" placeholder="Contraseña" th:field="*{password}"/></p>
