--- a/src/main/resources/templates/usuarios/modificarUsuario.html
+++ b/src/main/resources/templates/usuarios/modificarUsuario.html
@@ -4,7 +4,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta charset="ISO-8859-1">
-<title>Ver Perfil</title>
+<title>Modificar Perfil</title>
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 <link href="css/header.css" rel="stylesheet" type="text/css" />
 
@@ -54,22 +54,18 @@
 		<div class="row">
 			<div  class="col-md-9">
 				<div class="row form">
-				 <form th:object="${usuario}"  method="post" >
+				 <form th:object="${usuario}" th:action="@{/usuario/modificar}" method="post" >
 				 	<p>Log in</p>
 				 	<p><input type="text" placeholder="Usuario" disabled th:field="*{username}"/></p>
-				 	<p><input type="password" placeholder="Contraseña" disabled th:field="*{password}"/></p>
-				 	<p><input type="text" placeholder="Nombre" disabled th:field="*{nombre}" /></p>
-				 	<p><input type="text" placeholder="apellidos" disabled th:field="*{apellidos}"/></p>
-				 	<p><input type="email" placeholder="Usuario" disabled th:field="*{correo}"/></p>
-				 	<p><a th:href="@{/perfil/modificarForm}">Modificar</a></p>	
+				 	<p><input type="password" placeholder="Contraseña" th:field="*{password}"/></p>
+				 	<p><input type="password" placeholder=" Repita Contraseña" /></p>
+				 	<p><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
+				 	<p><input type="text" placeholder="apellidos" th:field="*{apellidos}"/></p>
+				 	<p><input type="email" placeholder="Usuario" th:field="*{correo}"/></p>				 	
+				 	<p><input type="submit" value="Modificar" id="entrar"/></p>
 				 </form>
 				</div>
-				<div class="row">
-				categorias
-				</div>
-				<div class="row">
-				etiquetas
-				</div>
+				<p><a th:href="@{/usuario/listar}">Gestion de usuario</a></p>
 			</div>
 		</div>
 
