--- a/src/main/resources/templates/posts/verPost.html
+++ b/src/main/resources/templates/posts/verPost.html
@@ -11,46 +11,55 @@
 </head>
 
 <body>
-
 	<header th:replace="fragmentos/header.html :: header"></header>
-	
+
 	<main class="container">
 		<div class="row">
 			<!-------------------------Post principal----------------------------------->
 			<div class="col-md-9 postprinci container">
 				<div class="row postp">
 					<h1 th:text="${post.titulo}"></h1>
-					<p  th:text="${post.fecha}"></p>
+					<p th:text="${post.fecha}"></p>
 					<img th:src="@{${ruta}+${post.foto}}"><img>
 					<p th:text="${post.post}"></p>
-					<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post -></a>
-					
+					<div th:if="${sig}">
+						<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post -></a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="media text-muted pt-3">						
+						<p class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+							<strong class="d-block text-gray-dark">@username</strong><span>Publicado:</span>
+							Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
+							tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+						</p>
+					</div>
 				</div>
 				<div class="row">
 					<div class=" anteriores">
-						<div class="col-md-4">
+						<div th:if="${sig}" class="col-md-4">
 							<div>
-							<h5 th:text="${sig.titulo}"></h5>
-							<img th:src="@{${ruta}+${sig.foto}}"><img>
-							<p th:text="${sig.post}"></p>
+								<h5 th:text="${sig.titulo}"></h5>
+								<img th:src="@{${ruta}+${sig.foto}}"><img>
+								<p th:text="${sig.post}"></p>
 							</div>
-							<a th:href="@{/post/verpost(id=${sig.postid})}">Leer mas</a>
+							<a th:href="@{/posts/verpost(id=${sig.postid})}">Leer mas</a>
 						</div>
-						<div class="col-md-4">
+						<div th:if="${sig1}" class="col-md-4">
 							<div>
-							<h5 th:text="${sig1.titulo}"></h5>
-							<img th:src="@{${ruta}+${sig1.foto}}"><img>
-							<p th:text="${sig1.post}"></p>
+								<h5 th:text="${sig1.titulo}"></h5>
+								<img th:src="@{${ruta}+${sig1.foto}}"><img>
+								<p th:text="${sig1.post}"></p>
 							</div>
-							<a th:href="@{/post/verpost(id=${sig1.postid})}">Leer mas</a>
+							<a th:href="@{/posts/verpost(id=${sig1.postid})}">Leer mas</a>
 						</div>
-						<div class="col-md-4">
+						<div th:if="${sig2}">
 							<div>
-							<h5 th:text="${sig2.titulo}"></h5>
-							<img th:src="@{${ruta}+${sig2.foto}}"><img>
-							<p th:text="${sig2.post}"></p>
+								<h5 th:text="${sig2.titulo}"></h5>
+								<img th:src="@{${ruta}+${sig2.foto}}"><img>
+								<p th:text="${sig2.post}"></p>
 							</div>
-							<a th:href="@{/post/verpost(id=${sig2.postid})}">Leer mas</a>
+							<a th:href="@{/posts/verpost(id=${sig2.postid})}">Leer mas</a>
 						</div>
 
 					</div>
@@ -80,8 +89,16 @@
 		</div>
 
 	</main>
-	
-	<div th:replace="fragmentos/footer.html :: footer"> </div>
+	<div th:if="${param.error}">
+		Usuario o password invalidos.
+	</div>
+	<div th:if="${param.logout}">
+		Has hecho logout.
+	</div>
+	<a th:href="@{/registrado}">registrado</a>
+	<a th:href="@{/admin}">admin</a>
+	<a th:href="@{/logout}">logout</a>
+
 </body>
 
 </html>
