--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -167,6 +167,14 @@ h3{
     text-transform: uppercase;
 }
 
+h5{
+    color: #cf9f6a;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
 .anteriores > div > div > p{
     height: 230px;
 }
@@ -179,3 +187,15 @@ h3{
      overflow: hidden;
 }
     
+.comentario textarea{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.comentario a{
+    float: right;
+}
+
+.comentario ~ div{
+    clear: both;
+}
