--- a/src/main/resources/templates/registrado/index.html
+++ b/src/main/resources/templates/registrado/index.html
@@ -11,21 +11,8 @@
 <body>
 <h1>dentro</h1>
 	
-	<header id="sp-logo">
-		<div class="container">
-			<div class="row">
-				<div id="sp-logo" class="col-sm-12 col-md-12">
-					<div class="sp-column ">
-						<a class="logo" href="index.html">
-							<h1>Viajando con María</h1>
-							<p class="logo-slogan"></p>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
+	<header th:replace="fragmentos/header.html :: header"></header>
 
-	</header>
 
 	<header id="sp-header" style="">
 		<div class="container">
