--- a/src/main/resources/templates/registroForm.html
+++ b/src/main/resources/templates/registroForm.html
@@ -10,45 +10,7 @@
 
 </head>
 <body>
-	<header id="sp-logo">
-		<div class="container">
-			<div class="row">
-				<div id="sp-logo" class="col-sm-12 col-md-12">
-					<div class="sp-column ">
-						<a class="logo" href="index.html">
-							<h1>Viajando con María</h1>
-							<p class="logo-slogan"></p>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-
-	</header>
-
-	<header id="sp-header" style="">
-		<div class="container">
-			<div class="row" style="position: relative;">
-				<div id="sp-menu" class="col-sm-2 col-md-2"></div>
-				<div id="sp-menu" class="col-sm-10 col-md-10"
-					style="position: static;">
-					<div class="sp-column ">
-						<div class="sp-megamenu-wrapper">
-							<a id="offcanvas-toggler" class="visible-xs"
-								href="http://alithemes.com/demo/aruze/#"><i
-								class="fa fa-bars"></i></a>
-							<ul class="sp-megamenu-parent menu-fade hidden-xs">
-								<li class="sp-menu-item current-item active"><a href="#">Inicio</a></li>
-								<li class="sp-menu-item"><a href="#">Categorias</a></li>
-								<li class="sp-menu-item sp-has-child"><a href="#">Sobre mi</a></li>
-								<li class="sp-menu-item"><a href="#">Contacto</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
+	<header th:replace="fragmentos/header.html :: header"></header>
 
 	<main class="container">
 		<div class="row">
