--- a/src/main/resources/templates/fragmentos/header.html
+++ b/src/main/resources/templates/fragmentos/header.html
@@ -6,7 +6,7 @@
 				<div id="sp-logo" class="col-sm-12 col-md-12">
 					<div class="sp-column ">
 						<a class="logo" href="index.html">
-							<h1>Viajando con María</h1>
+							<h1>Viajando con Maria</h1>
 							<p class="logo-slogan"></p>
 						</a>
 					</div>
@@ -26,7 +26,7 @@
 							<a id="offcanvas-toggler" class="visible-xs" href="http://alithemes.com/demo/aruze/#"><i
 									class="fa fa-bars"></i></a>
 							<ul class="sp-megamenu-parent menu-fade hidden-xs">
-								<li class="sp-menu-item current-item active"><a href="#">Inicio</a></li>
+								<li class="sp-menu-item current-item active"><a href="/">Inicio</a></li>
 								<li class="sp-menu-item"><a href="#">Categorias</a></li>
 								<li class="sp-menu-item sp-has-child"><a href="#">Sobre mi</a></li>
 								<li class="sp-menu-item"><a href="#">Contacto</a></li>
