--- a/src/main/resources/templates/posts/CerarPost.html
+++ b/src/main/resources/templates/posts/CerarPost.html
@@ -52,7 +52,10 @@
                 </form>
             </div>
         </div>
-        
+        <!------------------------ Aside --------------------------------------->
+			<div class="col-md-3 aside">
+				<div th:replace="fragmentos/aside.html :: aside"></div>
+			</div>
     </div>
 
 </div>
