--- a/src/main/resources/templates/posts/listaPost.html
+++ b/src/main/resources/templates/posts/listaPost.html
@@ -40,6 +40,10 @@
 				</table>
 				<a th:href="@{/post/crearPost}" class="btn" id="enviar">Crear post</a>
 			</div>
+			<!------------------------ Aside --------------------------------------->
+			<div class="col-md-3 aside">
+				<div th:replace="fragmentos/aside.html :: aside"></div>
+			</div>
 		</div>
 
 	</main>
