--- a/src/main/resources/templates/registroForm.html
+++ b/src/main/resources/templates/registroForm.html
@@ -27,12 +27,11 @@
 				 	<p><input type="submit" value="Registrar" id="entrar"/></p>
 				 </form>
 				</div>
-				<div class="row">
-				categorias
-				</div>
-				<div class="row">
-				etiquetas
-				</div>
+			
+			</div>
+			<!------------------------ Aside --------------------------------------->
+			<div class="col-md-3 aside">
+				<div th:replace="fragmentos/aside.html :: aside"></div>
 			</div>
 		</div>
 
