--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,23 +59,7 @@
 
 			<!------------------------ Aside --------------------------------------->
 			<div class="col-md-3 aside">
-				<div class="row form">
-
-					<a th:href="@{/registrado}">Log in</a>
-					<a th:href="@{/registro/form}">Registrarse</a>
-					</form>
-				</div>
-				<div class="row cat">
-					<h3>Categorias</h3>
-					<a th:each="categorias: ${categorias}" th:href="@{/post/categoria(id=${categorias.id_categoria})}"
-						th:text="${categorias.descripcion}"></a>
-				</div>
-				<div class="row eti">
-					<h3>Etiquetas</h3>
-					<a th:each="etiquetas: ${etiquetas}" th:href="@{/post/etiquetas(id=${etiquetas.id_etiqueta})}"
-						th:text="${etiquetas.descripcion}"></a>
-
-				</div>
+				<div th:replace="fragmentos/aside.html :: aside"></div>
 			</div>
 		</div>
 
