--- a/src/main/resources/templates/posts/modificarPost.html
+++ b/src/main/resources/templates/posts/modificarPost.html
@@ -56,7 +56,10 @@
                 </form>
             </div>
         </div>
-        
+        <!------------------------ Aside --------------------------------------->
+			<div class="col-md-3 aside">
+				<div th:replace="fragmentos/aside.html :: aside"></div>
+			</div>
     </div>
 
 
