--- a/src/main/resources/templates/fragmentos/aside.html
+++ b/src/main/resources/templates/fragmentos/aside.html
@@ -13,12 +13,12 @@
 	</div>
 	<div class="row cat">
 		<h3>Categorias</h3>
-		<a th:each="categorias: ${categorias}" th:href="@{/post/categoria(id=${categorias.id_categoria})}"
+		<a th:each="categorias: ${categorias}" th:href="@{/post/categoria(id_categoria=${categorias.categoriaid})}"
 			th:text="${categorias.descripcion}"></a>
 	</div>
 	<div class="row eti">
 		<h3>Etiquetas</h3>
-		<a th:each="etiquetas: ${etiquetas}" th:href="@{/post/etiquetas(id=${etiquetas.id_etiqueta})}"
+		<a th:each="etiquetas: ${etiquetas}" th:href="@{/post/etiquetas(id_etiqueta=${etiquetas.etiquetaid})}"
 			th:text="${etiquetas.descripcion}"></a>
 
 	</div>
