--- a/src/main/resources/templates/perfil/verUsuario.html
+++ b/src/main/resources/templates/perfil/verUsuario.html
@@ -5,8 +5,8 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Ver Perfil</title>
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="css/header.css" rel="stylesheet" type="text/css" />
+<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="../css/header.css" rel="stylesheet" type="text/css" /
 
 </head>
 <body>
