--- a/src/main/resources/templates/perfil/modificarUsuario.html
+++ b/src/main/resources/templates/perfil/modificarUsuario.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Modificar Perfil</title>
-<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="../css/header.css" rel="stylesheet" type="text/css" /
+	<meta charset="ISO-8859-1">
+	<title>Modificar Perfil</title>
+	<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="../css/header.css" rel="stylesheet" type="text/css" />
+	<link href="../css/crear.css" rel="stylesheet" type="text/css" />
 
 </head>
+
 <body>
 	<header th:replace="fragmentos/header.html :: header"></header>
 
 
 	<main class="container">
 		<div class="row">
-			<div  class="col-md-9">
+			<div class="col-md-9">
 				<div class="row form">
-				 <form th:object="${usuario}" th:action="@{/perfil/modificar}" method="post" >
-				 	<p>Log in</p>
-				 	<p><input type="text" placeholder="Usuario" disabled th:field="*{username}"/></p>
-				 	<p><input type="password" placeholder="Contraseña" th:field="*{password}"/></p>
-				 	<p><input type="password" placeholder=" Repita Contraseña" /></p>
-				 	<p><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
-				 	<p><input type="text" placeholder="apellidos" th:field="*{apellidos}"/></p>
-				 	<p><input type="email" placeholder="Usuario" th:field="*{correo}"/></p>				 	
-				 	<p><input type="submit" value="Modificar" id="entrar"/></p>
-				 </form>
+					<form th:object="${usuario}" th:action="@{/perfil/modificar}" method="post">
+						<p>Modificar perfil</p>
+						<p><input type="text" placeholder="Usuario" disabled th:field="*{username}" /></p>
+						<p><input type="password" placeholder="Contraseña" autocomplete="false" th:field="*{password}" /></p>
+						<p><input type="password" placeholder=" Repita Contraseña" /></p>
+						<p><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
+						<p><input type="text" placeholder="apellidos" th:field="*{apellidos}" /></p>
+						<p><input type="email" placeholder="Usuario" th:field="*{correo}" /></p>
+						<p><input class="btn" type="submit" value="Modificar" id="entrar" /></p>
+					</form>
 				</div>
-				
+
 			</div>
 			<!------------------------ Aside --------------------------------------->
 			<div class="col-md-3 aside">
@@ -36,9 +38,10 @@
 			</div>
 		</div>
 
-		
+
 	</main>
 
 
 </body>
+
 </html>
