--- a/src/main/resources/templates/usuarios/index.html
+++ b/src/main/resources/templates/usuarios/index.html
@@ -58,8 +58,8 @@
 			</div>
 
 			<!------------------------ Aside --------------------------------------->
-			<div class="col-md-3 aside">					
-				<div th:replace="fragmentos/asidelogin.html :: asidelogin"></div>
+			<div class="col-md-3 aside">
+				<div th:replace="fragmentos/aside.html :: aside"></div>
 			</div>
 		</div>
 
