--- a/src/main/resources/templates/perfil/modificarUsuario.html
+++ b/src/main/resources/templates/perfil/modificarUsuario.html
@@ -26,7 +26,7 @@
 						<p><input type="password" placeholder=" Repita Contraseña" /></p>
 						<p><input type="text" placeholder="Nombre" th:field="*{nombre}" /></p>
 						<p><input type="text" placeholder="apellidos" th:field="*{apellidos}" /></p>
-						<p><input type="email" placeholder="Usuario" th:field="*{correo}" /></p>
+						<p><input type="email" placeholder="correo" th:field="*{correo}" /></p>
 						<p><input class="btn" type="submit" value="Modificar" id="entrar" /></p>
 					</form>
 				</div>
