--- a/src/main/resources/templates/posts/modificarPost.html
+++ b/src/main/resources/templates/posts/modificarPost.html
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>Modificar Post</title>
+	<link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../../css/header.css" rel="stylesheet" type="text/css" />
 	<link href="../../css/crear.css" rel="stylesheet" type="text/css" />
 
@@ -15,8 +16,7 @@
 	<main class="container">		
     <div class="row">
         <div class="col-md-9">
-            <div class="card">
-                
+            <div class="row form">
                 <form th:object="${post}" th:action="@{/post/modificar}" method="post"  enctype="multipart/form-data" >
 				   
 					 <input type="hidden"  th:field="*{postid}"></p>
@@ -24,19 +24,19 @@
                    <input type="text"  th:field="*{titulo}"></p>
                    
                    <p><label>Texto</label>
-                   <textarea th:field="*{post}"></textarea></p>
+                   <textarea class="form-control" th:field="*{post}" rows="10"></textarea></p>
                    
                    <p><label>categoria</label>
-                   <select th:field="*{categoria}"  >
+                   <select class="form-control" th:field="*{categoria}"  >
 					   	<option value="0">Elija una categoria</option>
-						<option th:each="categorias: ${categorias}" th:value="${categorias.id_categoria}" th:text="${categorias.descripcion}"></option>
+						<option th:each="categorias: ${categorias}" th:value="${categorias.categoriaid}" th:text="${categorias.descripcion}"></option>
 					</select>
 					</p>
                    
 				   <div class="etiquetas">
 					   <label>etiquetas</label>
 						<div  th:each="etiquetas: ${etiquetas}" >				
-						<input type="checkbox" name="etiquetas" th:value="${etiquetas.id_etiqueta}" 
+						<input  type="checkbox" name="etiquetas" th:value="${etiquetas.etiquetaid}" 
 						/><label th:text="${etiquetas.descripcion}"></label>
 				   		</div>
 					</div>
@@ -46,11 +46,10 @@
                     <div class="form-group">
 						<label>Foto</label>
                         <label class="custom-file" id="customFile"> 
-                            <input  type="file" class="custom-file-input" name="file">
-                            <span class="custom-file-control form-control-file">Seleccionar</span>
+                            <input type="file" class=" form-control custom-file-input" name="file">
                         </label>
                     </div>
-                    <div style="margin-bottom: 10px">
+                    <div >
                         <button type="submit" class="btn btn-success" id="enviar">Enviar</button>
                     </div>
                 </form>
