--- a/src/main/resources/templates/fragmentos/footer.html
+++ b/src/main/resources/templates/fragmentos/footer.html
@@ -1,1 +1,11 @@
-<footer th:fragment="footer"> es el footer </footer>
+ 
+<footer class="footer mt-auto py-3" th:fragment="footer">
+  <div class="container">
+  	<div class="row">
+  	<div class="col-md-4"><span class="text-muted">Proyecto de DAW</span></div>
+    <div class="col-md-4"><span class="text-muted">María Criado Domínguez</span></div>
+    <div class="col-md-4"><span class="text-muted">Curso 2019-2020</span></div>
+    </div>
+  </div>
+</footer>
+
