--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,11 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
-	<meta charset="ISO-8859-1">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Insert title here</title>
 	<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../css/header.css" rel="stylesheet" type="text/css" />
+	<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -27,7 +28,7 @@
 					
 				</div>
 				<div class="row">
-					<div class=" anteriores">
+					<div class=" row anteriores">
 						<div class="col-md-4">
 							<div>
 							<h5 th:text="${sig.titulo}"></h5>
