--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
 					
 				</div>
 				<div class="row">
-					<div class=" anteriores">
+					<div class=" row anteriores">
 						<div class="col-md-4">
 							<div>
 							<h5 th:text="${sig.titulo}"></h5>
