--- a/src/main/resources/templates/fragmentos/header.html
+++ b/src/main/resources/templates/fragmentos/header.html
@@ -1,5 +1,7 @@
 
 <header th:fragment="header">
+	<script src="../../javascript/jquery-3.4.1.js"></script>
+	<script src="../../javascript/bootstrap.min.js"></script>
 	<header id="sp-logo">
 		<div class="container">
 			<div class="row">
@@ -16,26 +18,26 @@
 
 	</header>
 
-	<header id="sp-header" style="">
-		<div class="container">
-			<div class="row" style="position: relative;">
-				<div id="sp-menu" class="col-sm-2 col-md-2"></div>
-				<div id="sp-menu" class="col-sm-10 col-md-10" style="position: static;">
-					<div class="sp-column ">
-						<div class="sp-megamenu-wrapper">
-							<a id="offcanvas-toggler" class="visible-xs" href="http://alithemes.com/demo/aruze/#"><i
-									class="fa fa-bars"></i></a>
-							<ul class="sp-megamenu-parent menu-fade hidden-xs">
-								<li class="sp-menu-item current-item active"><a href="/">Inicio</a></li>
-								<li class="sp-menu-item"><a href="#">Categorias</a></li>
-								<li class="sp-menu-item sp-has-child"><a href="#">Sobre mi</a></li>
-								<li class="sp-menu-item"><a href="#">Contacto</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
+	
+
+	<nav class="navbar navbar-expand-md  navbar-light  ">
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarsExample04" aria-controls="navbarsExample04"
+			aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarsExample04">
+			<ul class="navbar-nav mr-auto sp-megamenu-parent">
+				<li class=" nav-item sp-menu-item current-item active"><a href="/">Inicio</a></li>
+					<li class=" nav-item sp-menu-item"><a href="#">Categorias</a></li>
+					<li class=" nav-item sp-menu-item sp-has-child"><a href="#">Sobre mi</a></li>
+					<li class=" nav-item sp-menu-item"><a href="#">Contacto</a></li>
+			
+			</ul>
+			
 		</div>
-	</header>
+	</nav>
+
 
 </header>
