--- a/src/main/resources/templates/registrado/index.html
+++ b/src/main/resources/templates/registrado/index.html
@@ -1,36 +1,72 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="css/header.css" rel="stylesheet" type="text/css" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Insert title here</title>
+	<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="../css/header.css" rel="stylesheet" type="text/css" />
+	<link href="../css/sticky-footer.css" rel="stylesheet" type="text/css" />
 
 </head>
+
 <body>
-<h1>dentro</h1>
-	
+
 	<header th:replace="fragmentos/header.html :: header"></header>
+	
 	<main class="container">
 		<div class="row">
-			<div  class="col-md-9"></div>
-			<div  class="col-md-3">
-				<div class="row form">				 
-				 	<p>Hola <span th:text="${nombre}"></span></p>
-				 	<p><a th:href="@{/perfil/ver}">Mi perfil</a></p>				 
+			<!-------------------------Post principal----------------------------------->
+			<div class="col-md-9 postprinci container">
+				<div class="row postp">
+					<h1 th:text="${post.titulo}"></h1>
+					<p  th:text="${post.fecha}"></p>
+					<img th:src="@{${ruta}+${post.foto}}"><img>
+					<p th:text="${post.post}"></p>
+					<a th:href="@{/post/verpost(id=${sig.postid})}">Siguiente post -></a>
+					
 				</div>
 				<div class="row">
-				categorias
+					<div class=" row anteriores">
+						<div class="col-md-4">
+							<div>
+							<h5 th:text="${sig.titulo}"></h5>
+							<img th:src="@{${ruta}+${sig.foto}}"><img>
+							<p th:text="${sig.post}"></p>
+							</div>
+							<a th:href="@{/post/verpost(id=${sig.postid})}">Leer mas</a>
+						</div>
+						<div class="col-md-4">
+							<div>
+							<h5 th:text="${sig1.titulo}"></h5>
+							<img th:src="@{${ruta}+${sig1.foto}}"><img>
+							<p th:text="${sig1.post}"></p>
+							</div>
+							<a th:href="@{/post/verpost(id=${sig1.postid})}">Leer mas</a>
+						</div>
+						<div class="col-md-4">
+							<div>
+							<h5 th:text="${sig2.titulo}"></h5>
+							<img th:src="@{${ruta}+${sig2.foto}}"><img>
+							<p th:text="${sig2.post}"></p>
+							</div>
+							<a th:href="@{/post/verpost(id=${sig2.postid})}">Leer mas</a>
+						</div>
+
+					</div>
 				</div>
-				<div class="row">
-				etiquetas
-				</div>
+			</div>
+
+			<!------------------------ Aside --------------------------------------->
+			<div class="col-md-3 aside">
+				<div th:replace="fragmentos/aside.html :: aside"></div>
 			</div>
 		</div>
 
 	</main>
-
-
+	
+	<div th:replace="fragmentos/footer.html :: footer"> </div>
 </body>
+
 </html>
